--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name | Portfolio</title>
+  <title>Han Zou | Portfolio</title>
   <style>
     :root {
       --bg-color: #121212;
@@ -144,8 +144,8 @@
 
     <!-- Hero Section -->
     <section class="hero">
-      <h1>Your Name</h1>
-      <p>Creative Developer • Problem Solver • Minimalist</p>
+      <h1>Han Zou</h1>
+      <p>Assistant Project Manager</p>
       <button class="cta-button">View My Work</button>
     </section>
 
@@ -153,8 +153,8 @@
     <section class="about">
       <h2>About Me</h2>
       <p>
-        I’m a web developer passionate about clean code, intuitive design, and solving complex problems.
-        My focus is on building responsive, user-first websites and applications that blend function with elegance.
+        I’m an assistant project manager experimenting with coding 
+        My focus is on building functional pages
       </p>
     </section>
 
